# mediline-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  env.txt  pyproject.toml
api/: app.py  config.py  main.py
api/models/: appointments.py  auth.py  doctors.py  patients.py  profile.py  user.py
api/routers/: appointments.py  auth.py  doctors.py  patients.py  register.py  user.py
api/utils/: current_user.py  enum_types.py  exceptions.py  password.py
dev/: notes.md  project.md
docs/: contributing.md  reading.md
scripts/: lint.sh  live.sh
