[tool.poetry]
name = "backend-api"
version = "0.1.0"
description = ""
authors = ["aahnik <daw@aahnik.dev>"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
beanie = "^1.22.6"
pydantic = { extras = ["email"], version = "^2.3.0" }
python-jose = "^3.3.0"
python-decouple = "^3.8"
passlib = "^1.7.4"
uvicorn = "^0.23.2"
email-validator = "^2.0.0.post2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
